--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "layout-for-crypto-bots",
   "version": "0.1.0",
+  "homepage": "https://alexyanchev.github.io/layout-for-crypto-bots/",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -11,6 +12,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
